# agcode-worker

./: .gitignore  Dockerfile  Dockerfile.dual  docker-compose.yml  pyproject.toml  skaffold.yaml
app/: main.py
app/asyncapi/: realtime_chat.yaml
app/routers/: chat_noob.py  chat_pro.py
app/services/: __init__.py  pro_chat.py  pro_chat_claude.py  pro_chat_codex.py
sidecar/: Dockerfile  main.py
sidecar/config/: gitconfig
sidecar/scripts/: entrypoint.sh
